--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "version": 2,
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs"
+  "installCommand": "npm install"
 } 
