--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-map-gl": "^6.1.7",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
