--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,9 @@
   "version": 2,
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "rewrites": [
+    { "source": "/api/webhook", "destination": "/api/webhook" },
+    { "source": "/api/webhook/", "destination": "/api/webhook" }
+  ]
 } 
