--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,11 @@
   "rewrites": [
     { "source": "/api/webhook", "destination": "/api/webhook" },
     { "source": "/api/webhook/", "destination": "/api/webhook" }
-  ]
+  ],
+  "functions": {
+    "src/app/api/webhook/route.ts": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
+  }
 } 
